<resources>
    <string name="app_name">TokenPay</string>
    <string name="app_title_payment_list">TokenPay - Payment List</string>
    <string name="app_title_get_qr">TokenPay - Get QR Code</string>
    <string name="app_title_payment">TokenPay - Payment Process</string>
    <string name="proceedtopayment">Proceed to payment</string>
    <string name="new_payment">New Payment</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_details">Payment Details</string>
    <string name="back_to_payment_list">Back to Payment List</string>
    <string name="qr_code_created_successfully">"QR code is created successfully !"</string>
    <string name="payment_saved_successfully">Payment record saved into local database successfully !</string>
    <string name="please_check_your_internet_connection">Please check your internet connection!</string>
</resources>