<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".ui.paymentlist.PaymentListFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearContainer"
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_title_payment_list"
            app:titleTextColor="@color/white">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/quart_margin"
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatEditText
            android:inputType="number"
            android:drawableStart="@drawable/ic_baseline_create_24"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingBottom="6dp"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:drawablePadding="6dp"
            android:hint="@string/payment_amount"
            android:id="@+id/txtNewPaymentAmount"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNewPayment"
            android:text="@string/new_payment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:background="@color/design_default_color_secondary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>


<data>

    <variable
        name="viewModel"
        type="com.yildirimomer.tokenqr.ui.paymentlist.PaymentListViewModel" />
</data>
</layout>