<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        tools:context=".ui.getpayment.PaymentFragment">

        <LinearLayout
            android:id="@+id/linearContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/standard_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnHome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/payment_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivStatus"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:src="@drawable/ic_baseline_clear_24"
                android:layout_width="@dimen/progress_width"
                android:layout_height="@dimen/progress_width" />

            <TextView
                android:id="@+id/txtDetails1"
                android:textSize="16sp"
                android:layout_margin="@dimen/half_margin"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/txtDetails2"
                android:textSize="16sp"
                android:layout_margin="@dimen/half_margin"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/txtDetails3"
                android:textSize="16sp"
                android:layout_margin="@dimen/half_margin"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/txtDetails4"
                android:textSize="16sp"
                android:layout_margin="@dimen/half_margin"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHome"
            android:text="@string/back_to_payment_list"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatButton>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/progress_width"
            android:layout_height="@dimen/progress_width"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintBottom_toTopOf="@id/linearContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:title="@string/app_title_payment"
                app:titleTextColor="@color/white">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <data>

        <variable
            name="viewModel"
            type="com.yildirimomer.tokenqr.ui.paymentlist.PaymentListViewModel" />
    </data>
</layout>